--- a/style.css
+++ b/style.css
@@ -3,3 +3,99 @@
     padding: 0;
     font-family: 'Red Hat Display', sans-serif;
 }
+body {
+    background-color: hsl(225, 100%, 94%);
+}
+main {
+    width: 100%;
+    height: 100vh;
+    background-image: url('./images/pattern-background-desktop.svg');
+    background-size: cover;
+    background-position-x: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+@media (max-width: 500px) {
+    main {
+        background-image: url('./images/pattern-background-mobile.svg');  
+    }
+}
+.card {
+    border-radius: 15px;
+    background-color: white;
+    height: 555px;
+    width: 360px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.illustration {
+    border-radius: 15px 15px 0 0;
+    width: 100%;
+}
+h1 {
+    margin-top: 30px;
+    font-size: 22px;
+    font-weight: 900;
+    color: hsl(223, 47%, 23%);
+}
+.description {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 13.5px;
+    line-height: 20px;
+    color: hsl(224, 23%, 55%);
+}
+.planContainer {
+    width: 75%;
+    margin-top: 35px;
+    display: flex;
+    align-items: center;
+}
+.music {
+    
+    transform: scale(.8);
+}
+.planBox {
+    margin-left: 10px;
+}
+h2 {
+    font-size: 13.5px;
+    letter-spacing: -0.5px;
+    font-weight: 900;
+    color: hsl(223, 47%, 23%);
+}
+.cost {
+    margin-top: 4px;
+    font-size: 13.5px;
+    color: hsl(224, 23%, 55%);
+}
+.changeLink {
+    letter-spacing: -0.5px;
+    margin-left: 80px;
+    font-size: 11.5px;
+    font-weight: 700;
+    color: hsl(245, 75%, 52%);
+}
+.paymentButton {
+    margin-top: 40px;
+    line-height: 40px;
+    width: 80%;
+    border-radius: 10px;
+    background-color: hsl(245, 75%, 52%);
+    text-align: center;
+    color: white;
+    font-size: 12px;
+    text-decoration: none;
+    font-weight: 700;
+    box-shadow: 0 16px 10px hsla(245, 75%, 52%, 0.15);
+}
+.cancelLink {
+    margin-top: 25px;
+    font-size: 12px;
+    color: hsl(224, 23%, 55%);
+    text-decoration: none;
+    font-weight: 900;
+    letter-spacing: 0.4px;
+}
