--- a/style.css
+++ b/style.css
@@ -3,15 +3,19 @@
     padding: 0;
     font-family: 'Red Hat Display', sans-serif;
 }
+/* - Very pale blue: hsl(225, 100%, 98%)
+- Desaturated blue: hsl(224, 23%, 55%)
+- Dark blue: hsl(223, 47%, 23%) */
 body {
-    background-color: hsl(225, 100%, 94%);
+    background: hsl(225, 100%, 94%);
 }
 main {
     width: 100%;
     height: 100vh;
     background-image: url('./images/pattern-background-desktop.svg');
-    background-size: cover;
-    background-position-x: center;
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: top;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -29,6 +33,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    box-shadow: 0 24px 24px hsla(245, 75%, 52%, 0.12);
 }
 .illustration {
     border-radius: 15px 15px 0 0;
