--- a/style.css
+++ b/style.css
@@ -20,16 +20,17 @@ main {
     align-items: center;
     justify-content: center;
 }
-@media (max-width: 500px) {
+@media (max-width: 400px) {
     main {
-        background-image: url('./images/pattern-background-mobile.svg');  
+        background-image: none;
+        padding: 50px;
     }
 }
 .card {
     border-radius: 15px;
     background-color: white;
     height: 555px;
-    width: 360px;
+    max-width: 360px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -46,6 +47,7 @@ h1 {
     color: hsl(223, 47%, 23%);
 }
 .description {
+    width: 80%;
     text-align: center;
     margin-top: 20px;
     font-size: 13.5px;
@@ -82,6 +84,11 @@ h2 {
     font-size: 11.5px;
     font-weight: 700;
     color: hsl(245, 75%, 52%);
+}
+@media (max-width: 400px) {
+    .changeLink {
+        margin-left: 50px;
+    }
 }
 .paymentButton {
     margin-top: 40px;
